# AI_autoaim

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  build.bat  fix_log.txt
kmboxnet-main/c++_demo/: calldemo.cpp
kmboxnet-main/c++_demo/NetConfig/: kmboxNet.cpp  kmboxNet.h
kmboxnet-main/c++_demo/kmNetLib/x64/Debug/: calldemo.obj.enc  vc143.idb
kmboxnet-main/c++_demo/kmNetLib/x64/Debug/kmNetLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
src/: aim_engine.cpp  config.hpp  config_manager.cpp  config_manager.hpp  engine.hpp  hotkey_manager.cpp  hotkey_manager.hpp  kalman_tracker.cpp  kalman_tracker.hpp  mouse_controller.cpp  mouse_controller.hpp  object_detector.cpp  object_detector.hpp  pid_controller.cpp  pid_controller.hpp  screen_capturer.cpp  screen_capturer.hpp  target_selector.cpp  target_selector.hpp
ui_cpp/: main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
ui_cpp/pages/: aimpage.cpp  aimpage.h  modelpage.cpp  modelpage.h  previewpage.cpp  previewpage.h  settingspage.cpp  settingspage.h
ui_cpp/resources/: style.qss
ui_cpp/widgets/: dragdroparea.cpp  dragdroparea.h  hotkeycapture.cpp  hotkeycapture.h  paramslider.cpp  paramslider.h  previewwindow.cpp  previewwindow.h
ui_qml/: qml_resources.qrc
ui_qml/cpp/: configviewmodel.cpp  configviewmodel.h  engineviewmodel.cpp  engineviewmodel.h  frameprovider.cpp  frameprovider.h  hotkeycapturedispatcher.h  logindialogcontroller.cpp  logindialogcontroller.h  main.cpp
ui_qml/qml/: main.qml
ui_qml/qml/components/: ButtonStyled.qml  CardBackground.qml  ComboBoxStyled.qml  DragDropArea.qml  HotkeyCapture.qml  ParamSlider.qml  PreviewWindow.qml  SectionHeader.qml  Sidebar.qml  SidebarButton.qml  StatusIndicator.qml  TargetSelector.qml  TextFieldStyled.qml  Toast.qml  ToggleSwitch.qml
ui_qml/qml/pages/: AimPage.qml  ModelPage.qml  PreviewPage.qml  SettingsPage.qml
ui_qml/qml/theme/: Theme.qml
